remain  a bug of overlap

--- a/test/bc-duoshuo/css/style.css
+++ b/test/bc-duoshuo/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .bullet {
-	height: 20px;
+	height: 28px;
 	padding: 1px;
 	background: #fff;
 	opacity: 0.7;
